# LearnOpenGL

./: CMakeLists.txt  compile_win.bat  generate_vs.bat
include/glad/: glad.h
src/: glad.c
